Enable WebUSB device detection when using the new Windows USB backend.

One of the goals of the new USB backend on Windows is to resolve the
issue of Chrome getting stuck in blocking USB ioctls inside libusb so
let's re-enable WebUSB device detection when running with the new
backend enabled (which is so far disabled by default).

BUG=652416

Review-Url: https://codereview.chromium.org/2734933003
Cr-Commit-Position: refs/heads/master@{#455157}

Former-commit-id: 76a2fa3cf40ee87f63d123c131b5ef5f15cdd7a6